--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 { "name": "pg",
-  "version": "0.4.1",
-  "description": "PostgreSQL client - pure javascript & libpq with the same API",
-  "keywords" : ["postgres", "pg", "libpq", "postgre", "database", "rdbms"],
+  "version": "0.2.7",
+  "description": "Pure JavaScript PostgreSQL client",
   "homepage": "http://github.com/brianc/node-postgres",
   "repository" : {
     "type" : "git",
     "url" : "git://github.com/brianc/node-postgres.git"
   },
   "author" : "Brian Carlson <brian.m.carlson@gmail.com>",
-  "main" : "./lib",
-  "scripts" : { 
-    "test" : "make test",
-    "install" : "node-waf configure build || true"
-  },
+  "main" : "./lib/index",
+  "directories" : { "lib" : "./lib" },
+  "scripts" : { "test" : "make test" },
   "engines" : { "node": ">= 0.2.2" }
 }
