--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   "main": "./lib",
   "dependencies": {
     "generic-pool": "2.0.3",
-    "buffer-writer": "1.0.0",
-    "ref": "0.1.3"
+    "buffer-writer": "1.0.0"
   },
   "devDependencies": {
     "jshint": "1.1.0",
