--- a/package.json
+++ b/package.json
@@ -1,35 +1,20 @@
 {
-  "name": "pg-query-stream",
-  "version": "0.2.0",
-  "description": "Postgres query result returned as readable stream",
+  "name": "pg-cursor",
+  "version": "0.0.1",
+  "description": "",
   "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
   "scripts": {
-    "test": "make test"
+    "test": "node test/"
   },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/brianc/node-pg-query-stream.git"
-  },
-  "keywords": [
-    "postgres",
-    "pg",
-    "query",
-    "stream"
-  ],
   "author": "Brian M. Carlson",
-  "license": "BSD-2-Clause",
-  "bugs": {
-    "url": "https://github.com/brianc/node-pg-query-stream/issues"
-  },
+  "license": "MIT",
   "devDependencies": {
-    "pg.js": "~2.8.0",
-    "gonna": "0.0.0",
-    "lodash": "~2.2.1",
-    "concat-stream": "~1.0.1",
-    "through": "~2.3.4",
-    "stream-tester": "0.0.5",
-    "stream-spec": "~0.3.5",
-    "jsonstream": "0.0.1",
-    "JSONStream": "~0.7.1"
+    "gonna": "0.0.0"
+  },
+  "dependencies": {
+    "pg.js": "~2.7.0"
   }
 }
