--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "generic-pool": "2.0.3",
     "buffer-writer": "1.0.0",
-    "pgpass": "git://github.com/hoegaarden/pgpass"
+    "nan": "~0.6.0"
   },
   "devDependencies": {
     "jshint": "1.1.0",
