--- a/package.json
+++ b/package.json
@@ -1,19 +1,38 @@
 {
-  "name": "pg-cursor",
-  "version": "0.1.2",
-  "description": "",
+  "name": "pg-query-stream",
+  "version": "0.3.0",
+  "description": "Postgres query result returned as readable stream",
   "main": "index.js",
-  "directories": {
-    "test": "test"
-  },
   "scripts": {
-    "test": "node test/"
+    "test": "make test"
   },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/brianc/node-pg-query-stream.git"
+  },
+  "keywords": [
+    "postgres",
+    "pg",
+    "query",
+    "stream"
+  ],
   "author": "Brian M. Carlson",
-  "license": "MIT",
+  "license": "BSD-2-Clause",
+  "bugs": {
+    "url": "https://github.com/brianc/node-pg-query-stream/issues"
+  },
   "devDependencies": {
-    "pg.js": "~2.8.1",
+    "pg.js": "~2.8.0",
+    "lodash": "~2.2.1",
+    "concat-stream": "~1.0.1",
+    "through": "~2.3.4",
+    "stream-tester": "0.0.5",
+    "stream-spec": "~0.3.5",
+    "jsonstream": "*",
+    "JSONStream": "~0.7.1",
     "mocha": "~1.17.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "pg-cursor": "~0.1.2"
+  }
 }
