--- a/package.json
+++ b/package.json
@@ -1,19 +1,29 @@
 {
-  "name": "pg-cursor",
-  "version": "1.0.0",
-  "description": "",
+  "name": "pg-connection-string",
+  "version": "0.1.2",
+  "description": "Functions for dealing with a PostgresSQL connection string",
   "main": "index.js",
-  "directories": {
-    "test": "test"
-  },
   "scripts": {
-    "test": "mocha test/"
+    "test": "tap ./test"
   },
-  "author": "Brian M. Carlson",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/iceddev/pg-connection-string"
+  },
+  "keywords": [
+    "pg",
+    "connection",
+    "string",
+    "parse"
+  ],
+  "author": "Blaine Bublitz <blaine@iceddev.com> (http://iceddev.com/)",
   "license": "MIT",
-  "devDependencies": {
-    "pg.js": "~3.4.4",
-    "mocha": "~1.17.1"
+  "bugs": {
+    "url": "https://github.com/iceddev/pg-connection-string/issues"
   },
-  "dependencies": {}
+  "homepage": "https://github.com/iceddev/pg-connection-string",
+  "dependencies": {},
+  "devDependencies": {
+    "tap": "^0.4.11"
+  }
 }
