--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pg",
-  "version": "3.4.4",
+  "version": "3.4.2",
   "description": "PostgreSQL client - pure javascript & libpq with the same API",
   "keywords": [
     "postgres",
@@ -18,12 +18,12 @@
   "author": "Brian Carlson <brian.m.carlson@gmail.com>",
   "main": "./lib",
   "dependencies": {
-    "bindings": "1.2.1",
     "buffer-writer": "1.0.0",
     "generic-pool": "2.1.1",
-    "nan": "1.3.0",
+    "nan": "~1.3.0",
     "packet-reader": "0.2.0",
-    "pg-connection-string": "0.1.2",
+    "pg-connection-string": "0.1.1",
+    "pg-native": "0.5.2",
     "pg-types": "1.4.0",
     "pgpass": "0.0.3"
   },
@@ -34,8 +34,7 @@
   },
   "scripts": {
     "changelog": "npm i github-changes && ./node_modules/.bin/github-changes -o brianc -r node-postgres -d pulls -a -v",
-    "test": "make test-travis connectionString=postgres://postgres@localhost:5432/postgres",
-    "install": "node-gyp rebuild || (exit 0)"
+    "test": "make test-travis connectionString=postgres://postgres@localhost:5432/postgres"
   },
   "engines": {
     "node": ">= 0.8.0"
