--- a/package.json
+++ b/package.json
@@ -18,24 +18,23 @@
   "author": "Brian Carlson <brian.m.carlson@gmail.com>",
   "main": "./lib",
   "dependencies": {
-    "bindings": "1.2.1",
     "buffer-writer": "1.0.0",
     "generic-pool": "2.1.1",
     "nan": "1.3.0",
     "packet-reader": "0.2.0",
     "pg-connection-string": "0.1.3",
+    "pg-native": "1.4.2",
     "pg-types": "1.6.0",
     "pgpass": "0.0.3"
   },
   "devDependencies": {
+    "async": "0.9.0",
     "jshint": "2.5.2",
-    "semver": "~3.0.1",
-    "async": "0.9.0"
+    "semver": "~3.0.1"
   },
   "scripts": {
     "changelog": "npm i github-changes && ./node_modules/.bin/github-changes -o brianc -r node-postgres -d pulls -a -v",
-    "test": "make test-travis connectionString=postgres://postgres@localhost:5432/postgres",
-    "install": "node-gyp rebuild || (exit 0)"
+    "test": "make test-travis connectionString=postgres://postgres@localhost:5432/postgres"
   },
   "engines": {
     "node": ">= 0.8.0"
