--- a/package.json
+++ b/package.json
@@ -1,19 +1,42 @@
 {
-  "name": "pg-cursor",
-  "version": "1.0.1",
-  "description": "",
+  "name": "pg-pool",
+  "version": "1.3.0",
+  "description": "Connection pool for node-postgres",
   "main": "index.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "mocha test/"
+    "test": "node_modules/.bin/standard && node_modules/.bin/mocha"
   },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/brianc/node-pg-pool.git"
+  },
+  "keywords": [
+    "pg",
+    "postgres",
+    "pool",
+    "database"
+  ],
   "author": "Brian M. Carlson",
   "license": "MIT",
-  "devDependencies": {
-    "pg": "~6.0.0",
-    "mocha": "~1.17.1"
+  "bugs": {
+    "url": "https://github.com/brianc/node-pg-pool/issues"
   },
-  "dependencies": {}
+  "homepage": "https://github.com/brianc/node-pg-pool#readme",
+  "devDependencies": {
+    "bluebird": "3.4.0",
+    "co": "4.6.0",
+    "expect.js": "0.3.1",
+    "lodash": "4.13.1",
+    "mocha": "^2.3.3",
+    "pg": "5.1.0",
+    "standard": "7.1.2",
+    "standard-format": "2.2.1"
+  },
+  "dependencies": {
+    "generic-pool": "2.4.2",
+    "object-assign": "4.1.0"
+  }
 }
