--- a/package.json
+++ b/package.json
@@ -1,30 +1,19 @@
 {
-  "name": "pg-connection-string",
-  "version": "0.1.3",
-  "description": "Functions for dealing with a PostgresSQL connection string",
-  "main": "./index.js",
-  "types": "./index.d.ts",
+  "name": "pg-cursor",
+  "version": "1.0.2",
+  "description": "",
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
   "scripts": {
-    "test": "tap ./test"
+    "test": "mocha test/"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/iceddev/pg-connection-string"
-  },
-  "keywords": [
-    "pg",
-    "connection",
-    "string",
-    "parse"
-  ],
-  "author": "Blaine Bublitz <blaine@iceddev.com> (http://iceddev.com/)",
+  "author": "Brian M. Carlson",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/iceddev/pg-connection-string/issues"
-  },
-  "homepage": "https://github.com/iceddev/pg-connection-string",
-  "dependencies": {},
   "devDependencies": {
-    "tap": "^0.4.11"
-  }
+    "pg": "~6.0.0",
+    "mocha": "~1.17.1"
+  },
+  "dependencies": {}
 }
