--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "async": "0.9.0",
     "co": "4.6.0",
     "jshint": "2.5.2",
-    "pg-copy-streams": "0.3.0"
+    "lodash": "4.13.1",
+    "pg-copy-streams": "0.3.0",
+    "promise-polyfill": "5.2.1"
   },
   "minNativeVersion": "1.7.0",
   "scripts": {
