--- a/.travis.yml
+++ b/.travis.yml
@@ -6,20 +6,8 @@ before_script:
 env:
   - CC=clang CXX=clang++ npm_config_clang=1 PGUSER=postgres PGDATABASE=postgres
 
-node_js: "6"
-addons:
-  postgresql: "9.6"
-
 matrix:
   include:
-    - node_js: "0.10"
-      addons:
-        postgresql: "9.6"
-      env: []
-    - node_js: "0.12"
-      addons:
-        postgresql: "9.6"
-      env: []
     - node_js: "4"
       addons:
         postgresql: "9.6"
@@ -42,3 +30,25 @@ matrix:
     - node_js: "6"
       addons:
         postgresql: "9.5"
+    - node_js: "6"
+      addons:
+        postgresql: "9.6"
+    - node_js: "8"
+      addons:
+        postgresql: "9.1"
+      dist: precise
+    - node_js: "8"
+      addons:
+        postgresql: "9.2"
+    - node_js: "8"
+      addons:
+        postgresql: "9.3"
+    - node_js: "8"
+      addons:
+        postgresql: "9.4"
+    - node_js: "8"
+      addons:
+        postgresql: "9.5"
+    - node_js: "8"
+      addons:
+        postgresql: "9.6"
