--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pg",
-  "version": "6.2.3",
+  "version": "6.2.4",
   "description": "PostgreSQL client - pure javascript & libpq with the same API",
   "keywords": [
     "postgres",
@@ -30,7 +30,9 @@
     "async": "0.9.0",
     "co": "4.6.0",
     "jshint": "2.5.2",
-    "pg-copy-streams": "0.3.0"
+    "lodash": "4.13.1",
+    "pg-copy-streams": "0.3.0",
+    "promise-polyfill": "5.2.1"
   },
   "minNativeVersion": "1.7.0",
   "scripts": {
