--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,7 @@
 language: node_js
-dist: trusty
-sudo: false
 node_js:
   - "4.2"
   - "6"
   - "8"
 env:
-  - PGUSER=postgres
-services:
-  - postgresql
-addons:
-  postgresql: "9.6"
-before_script:
-  - psql -c 'create database travis;' -U postgres | true
+  - PGUSER=postgres PGDATABASE=postgres
