Add connection & query timeout if all clients are checked out (#70)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: node_js
-node_js:
-  - "4.2"
-  - "6"
-  - "8"
-env:
-  - PGUSER=postgres PGDATABASE=postgres
+
+matrix:
+  include:
+    - node_js: "4"
+      addons:
+        postgresql: "9.1"
+    - node_js: "6"
+      addons:
+        postgresql: "9.4"
