--- a/package.json
+++ b/package.json
@@ -1,34 +1,25 @@
 {
-  "name": "pg-connection-string",
-  "version": "2.0.0",
-  "description": "Functions for dealing with a PostgresSQL connection string",
-  "main": "./index.js",
-  "types": "./index.d.ts",
+  "name": "pg-cursor",
+  "version": "1.3.0",
+  "description": "",
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
   "scripts": {
-    "test": "istanbul cover _mocha && npm run check-coverage",
-    "check-coverage": "istanbul check-coverage --statements 100 --branches 100 --lines 100 --functions 100",
-    "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
+    "test": " mocha && eslint ."
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/iceddev/pg-connection-string"
-  },
-  "keywords": [
-    "pg",
-    "connection",
-    "string",
-    "parse"
-  ],
-  "author": "Blaine Bublitz <blaine@iceddev.com> (http://iceddev.com/)",
+  "author": "Brian M. Carlson",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/iceddev/pg-connection-string/issues"
-  },
-  "homepage": "https://github.com/iceddev/pg-connection-string",
-  "dependencies": {},
   "devDependencies": {
-    "chai": "^4.1.1",
-    "istanbul": "^0.4.5",
-    "mocha": "^3.5.0"
-  }
+    "eslint": "^4.4.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "mocha": "^3.5.0",
+    "pg": "6.x"
+  },
+  "dependencies": {}
 }
