--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,15 @@
 language: node_js
+dist: trusty
+sudo: false
 node_js:
-  - "4"
+  - "4.2"
   - "6"
   - "8"
-  - "10"
 env:
-  - PGUSER=postgres PGDATABASE=postgres
+  - PGUSER=postgres
+services:
+  - postgresql
+addons:
+  postgresql: "9.6"
+before_script:
+  - psql -c 'create database travis;' -U postgres | true
