--- a/package.json
+++ b/package.json
@@ -1,29 +1,43 @@
 {
-  "name": "pg-cursor",
-  "version": "1.3.0",
-  "description": "",
+  "name": "pg-pool",
+  "version": "2.0.4",
+  "description": "Connection pool for node-postgres",
   "main": "index.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": " mocha && eslint ."
+    "test": " node_modules/.bin/mocha && node_modules/.bin/standard"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/brianc/node-pg-cursor.git"
+    "url": "git://github.com/brianc/node-pg-pool.git"
   },
+  "keywords": [
+    "pg",
+    "postgres",
+    "pool",
+    "database"
+  ],
   "author": "Brian M. Carlson",
   "license": "MIT",
-  "devDependencies": {
-    "eslint": "^4.4.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.1",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "mocha": "^3.5.0",
-    "pg": "6.x"
+  "bugs": {
+    "url": "https://github.com/brianc/node-pg-pool/issues"
   },
-  "dependencies": {}
+  "homepage": "https://github.com/brianc/node-pg-pool#readme",
+  "devDependencies": {
+    "bluebird": "3.4.1",
+    "co": "4.6.0",
+    "expect.js": "0.3.1",
+    "lodash": "4.13.1",
+    "mocha": "^2.3.3",
+    "pg": "*",
+    "pg-cursor": "^1.3.0",
+    "standard": "7.1.2",
+    "standard-format": "2.2.1"
+  },
+  "dependencies": {},
+  "peerDependencies": {
+    "pg": ">5.0"
+  }
 }
