--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,15 @@
 language: node_js
-
-matrix:
-  include:
-    - node_js: "4"
-      addons:
-        postgresql: "9.1"
-      dist: precise
-    - node_js: "6"
-      addons:
-        postgresql: "9.4"
-    - node_js: "8"
-      addons:
-        postgresql: "9.6"
-    - node_js: "10"
-      addons:
-        postgresql: "9.6"
+dist: trusty
+sudo: false
+node_js:
+  - "4.2"
+  - "6"
+  - "8"
+env:
+  - PGUSER=postgres
+services:
+  - postgresql
+addons:
+  postgresql: "9.6"
+before_script:
+  - psql -c 'create database travis;' -U postgres | true
