--- a/package.json
+++ b/package.json
@@ -1,43 +1,29 @@
 {
-  "name": "pg-pool",
-  "version": "2.0.6",
-  "description": "Connection pool for node-postgres",
+  "name": "pg-cursor",
+  "version": "1.3.0",
+  "description": "",
   "main": "index.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": " node_modules/.bin/mocha && node_modules/.bin/standard"
+    "test": " mocha && eslint ."
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/brianc/node-pg-pool.git"
+    "url": "git://github.com/brianc/node-pg-cursor.git"
   },
-  "keywords": [
-    "pg",
-    "postgres",
-    "pool",
-    "database"
-  ],
   "author": "Brian M. Carlson",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/brianc/node-pg-pool/issues"
-  },
-  "homepage": "https://github.com/brianc/node-pg-pool#readme",
   "devDependencies": {
-    "bluebird": "3.4.1",
-    "co": "4.6.0",
-    "expect.js": "0.3.1",
-    "lodash": "^4.17.11",
-    "mocha": "^5.2.0",
-    "pg": "*",
-    "pg-cursor": "^1.3.0",
-    "standard": "7.1.2",
-    "standard-format": "^2.2.4"
+    "eslint": "^4.4.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "mocha": "^3.5.0",
+    "pg": "6.x"
   },
-  "dependencies": {},
-  "peerDependencies": {
-    "pg": ">5.0"
-  }
+  "dependencies": {}
 }
