--- a/package.json
+++ b/package.json
@@ -1,32 +1,42 @@
 {
-  "name": "pg-cursor",
+  "name": "pg-query-stream",
   "version": "2.0.0",
-  "description": "Query cursor extension for node-postgres",
+  "description": "Postgres query result returned as readable stream",
   "main": "index.js",
-  "directories": {
-    "test": "test"
-  },
   "scripts": {
-    "test": " mocha && eslint ."
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/brianc/node-pg-cursor.git"
+    "url": "git://github.com/brianc/node-pg-query-stream.git"
   },
+  "keywords": [
+    "postgres",
+    "pg",
+    "query",
+    "stream"
+  ],
   "author": "Brian M. Carlson",
   "license": "MIT",
-  "devDependencies": {
-    "eslint": "^6.5.1",
-    "eslint-config-prettier": "^6.4.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "mocha": "^6.2.2",
-    "pg": "7.x",
-    "prettier": "^1.18.2"
+  "bugs": {
+    "url": "https://github.com/brianc/node-pg-query-stream/issues"
   },
-  "prettier": {
-    "semi": false,
-    "printWidth": 120,
-    "trailingComma": "es5",
-    "singleQuote": true
+  "devDependencies": {
+    "JSONStream": "~0.7.1",
+    "concat-stream": "~1.0.1",
+    "eslint": "^4.4.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "mocha": "^6.2.2",
+    "pg": "^7.5.0",
+    "stream-spec": "~0.3.5",
+    "stream-tester": "0.0.5",
+    "through": "~2.3.4"
+  },
+  "dependencies": {
+    "pg-cursor": "2.0.0"
   }
 }
