--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,17 @@
 {
-  "extends": "standard",
-  "env": {
-    "mocha": true
+  "extends": ["eslint:recommended"],
+  "parserOptions": {
+    "ecmaVersion": 2017
   },
+  "plugins": ["prettier"],
   "rules": {
-    "no-new-func": "off"
+    "prettier/prettier": "error",
+    "prefer-const": "error",
+    "no-var": "error"
+  },
+  "env": {
+    "es6": true,
+    "node": true,
+    "mocha": true
   }
 }
