--- a/package.json
+++ b/package.json
@@ -1,49 +1,32 @@
 {
-  "name": "pg-query-stream",
+  "name": "pg-cursor",
   "version": "2.0.0",
-  "description": "Postgres query result returned as readable stream",
+  "description": "Query cursor extension for node-postgres",
   "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
   "scripts": {
-    "test": "mocha"
+    "test": " mocha && eslint ."
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/brianc/node-pg-query-stream.git"
+    "url": "git://github.com/brianc/node-pg-cursor.git"
   },
-  "keywords": [
-    "postgres",
-    "pg",
-    "query",
-    "stream"
-  ],
   "author": "Brian M. Carlson",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/brianc/node-pg-query-stream/issues"
-  },
   "devDependencies": {
-    "JSONStream": "~0.7.1",
-    "concat-stream": "~1.0.1",
-    "eslint": "^4.4.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.1",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1",
+    "eslint": "^6.5.1",
+    "eslint-config-prettier": "^6.4.0",
+    "eslint-plugin-prettier": "^3.1.1",
     "mocha": "^6.2.2",
-    "pg": "^7.5.0",
-    "prettier": "^1.18.2",
-    "stream-spec": "~0.3.5",
-    "stream-tester": "0.0.5",
-    "through": "~2.3.4"
+    "pg": "7.x",
+    "prettier": "^1.18.2"
   },
   "prettier": {
     "semi": false,
     "printWidth": 120,
     "trailingComma": "es5",
     "singleQuote": true
-  },
-  "dependencies": {
-    "pg-cursor": "2.0.0"
   }
 }
