--- a/.eslintrc
+++ b/.eslintrc
@@ -1,17 +1,9 @@
 {
-  "extends": ["eslint:recommended"],
-  "parserOptions": {
-    "ecmaVersion": 2017
-  },
-  "plugins": ["prettier"],
-  "rules": {
-    "prettier/prettier": "error",
-    "prefer-const": "error",
-    "no-var": "error"
-  },
+  "extends": "standard",
   "env": {
-    "es6": true,
-    "node": true,
     "mocha": true
+  },
+  "rules": {
+    "no-new-func": "off"
   }
 }
