Update types & move some configs around

--- a/lerna.json
+++ b/lerna.json
@@ -4,8 +4,5 @@
   ],
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "version": "independent",
-  "ignoreChanges": [
-    "**/*.md"
-  ]
+  "version": "independent"
 }
