--- a/packages/pg/package.json
+++ b/packages/pg/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pg",
-  "version": "7.15.2",
+  "version": "7.15.1",
   "description": "PostgreSQL client - pure javascript & libpq with the same API",
   "keywords": [
     "database",
@@ -22,6 +22,7 @@
     "buffer-writer": "2.0.0",
     "packet-reader": "1.0.0",
     "pg-connection-string": "0.1.3",
+    "pg-packet-stream": "^1.0.0",
     "pg-pool": "^2.0.7",
     "pg-types": "^2.1.0",
     "pgpass": "1.x",
