--- a/packages/pg-connection-string/package.json
+++ b/packages/pg-connection-string/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/brianc/node-postgres.git"
+    "url": "https://github.com/iceddev/pg-connection-string"
   },
   "keywords": [
     "pg",
