--- a/packages/pg-pool/package.json
+++ b/packages/pg-pool/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/brianc/node-postgres.git"
+    "url": "git://github.com/brianc/node-pg-pool.git"
   },
   "keywords": [
     "pg",
