--- a/packages/pg-pool/package.json
+++ b/packages/pg-pool/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pg-pool",
-  "version": "3.2.0",
+  "version": "3.1.0",
   "description": "Connection pool for node-postgres",
   "main": "index.js",
   "directories": {
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/brianc/node-postgres.git"
+    "url": "git://github.com/brianc/node-pg-pool.git"
   },
   "keywords": [
     "pg",
@@ -30,7 +30,7 @@
     "co": "4.6.0",
     "expect.js": "0.3.1",
     "lodash": "^4.17.11",
-    "mocha": "^7.1.2",
+    "mocha": "^5.2.0",
     "pg-cursor": "^1.3.0"
   },
   "peerDependencies": {
