--- a/packages/pg-pool/package.json
+++ b/packages/pg-pool/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pg-pool",
-  "version": "3.1.0",
+  "version": "3.2.0",
   "description": "Connection pool for node-postgres",
   "main": "index.js",
   "directories": {
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/brianc/node-pg-pool.git"
+    "url": "git://github.com/brianc/node-postgres.git"
   },
   "keywords": [
     "pg",
